# feedme

./: .air.toml  .env.example  .gitignore  2025_01_19_0102-5310fb7c65c6_create_schema.py  68ae39a9e5ed_adding_recipes_and_tags.py  alembic.ini  debug.py  go.mod  go.sum  pyproject.toml  server.go
app/: db.py  debug.py  main.py  patching.py
app/db_models/: __init__.py  base.py  engine.py  recipes.py  tags.py
app/dtos/: recipes.py
app/http/: helpers.py
app/routers/: index_router.py  recipes_router.py  shared_router.py
app/services/: templating.py
assets/stylesheets/: colors.css  styles.css
db/local/: docker-compose.yaml
db/schema/: V1_schema_setup.sql  env.py
db/schema/versions/: 80e02e4bcf23_schema_setup.py
public/stylesheets/: styles.css
schema/: env.py
schema/versions/: 2025_01_19_0109-de8312431ea7_create_recipe_schema.py  2025_01_19_0110-9e68aea6c797_adding_recipes_and_tags.py  211fe07e191e_adding_recipes_and_tags.py
templates/components/index/: create_recipe_modal.jinja
templates/components/recipes/: edit_form.jinja
templates/components/shared/: recipe_card.jinja  side_nav.jinja
templates/components/site/: header_meta.hbs  header_resources.hbs
templates/layouts/: default_layout.jinja
templates/pages/: index.hbs  index.jinja
templates/pages/recipes/: edit-recipe.jinja  recipe.jinja
templates/partials/recipes/: image_upload.jinja  save.jinja
templates/partials/shared/: create_recipe_modal.jinja
tests/http/: test_helpers.py
