[project]
name = "feedme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

#[jinja-lsp]
#templates = "./templates"
#backend = ["./app"]
#lang = "python"
