[project]
name = "feedme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.5",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "debugpy>=1.8.11",
]
